@@ -1,16 +1,15 @@
 // SPDX-License-Identifier: Apache-2.0
 package org.hiero.otter.fixtures.container;
 
-import static org.hiero.otter.fixtures.container.ContainerNetwork.NODE_IDENTIFIER_FORMAT;
 import static org.hiero.otter.fixtures.container.utils.ContainerConstants.CONTAINER_APP_WORKING_DIR;
 import static org.hiero.otter.fixtures.container.utils.ContainerConstants.CONTAINER_CONTROL_PORT;
 import static org.hiero.otter.fixtures.container.utils.ContainerConstants.NODE_COMMUNICATION_PORT;
 import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getContainerControlDebugPort;
-import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getJavaToolOptions;
 import static org.hiero.otter.fixtures.container.utils.ContainerConstants.getNodeCommunicationDebugPort;
+import static org.hiero.otter.fixtures.internal.AbstractNetwork.NODE_IDENTIFIER_FORMAT;
 
-import com.hedera.hapi.platform.state.NodeId;
 import edu.umd.cs.findbugs.annotations.NonNull;
+import org.hiero.consensus.model.node.NodeId;
 import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.Network;
 import org.testcontainers.containers.wait.strategy.Wait;
@@ -27,9 +26,8 @@ public class ContainerImage extends GenericContainer<ContainerImage> {
      *
      * @param dockerImage the Docker image to run
      * @param network the Docker network to attach the container to
-     * @param selfId the selfId for the node
-     * Note: Previously this class bind-mounted a local saved-state directory into the container. We now copy
-     * files out of the container on demand instead of mounting a directory.
+     * @param selfId the selfId for the node Note: Previously this class bind-mounted a local saved-state directory into
+     * the container. We now copy files out of the container on demand instead of mounting a directory.
      */
     public ContainerImage(
             @NonNull final ImageFromDockerfile dockerImage,
@@ -48,12 +46,17 @@ public class ContainerImage extends GenericContainer<ContainerImage> {
         withNetwork(network)
                 .withNetworkAliases(alias)
                 .withExposedPorts(CONTAINER_CONTROL_PORT, NODE_COMMUNICATION_PORT)
-                .waitingFor(Wait.forListeningPorts(CONTAINER_CONTROL_PORT, containerControlDebugPort));
+                .withWorkingDirectory(CONTAINER_APP_WORKING_DIR)
+                .waitingFor(Wait.forListeningPorts(CONTAINER_CONTROL_PORT, containerControlDebugPort))
+                .withCommand(
+                        "java",
+                        "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:" + containerControlDebugPort,
+                        "-Djdk.attach.allowAttachSelf=true",
+                        "-XX:+StartAttachListener",
+                        "-jar",
+                        "/opt/DockerApp/apps/DockerApp.jar");
 
-        withEnv("JAVA_TOOL_OPTIONS", getJavaToolOptions(containerControlDebugPort));
         addFixedExposedPort(containerControlDebugPort, containerControlDebugPort);
         addFixedExposedPort(nodeCommunicationDebugPort, nodeCommunicationDebugPort);
-
-        withWorkingDirectory(CONTAINER_APP_WORKING_DIR);
     }
 }
